--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="https://github.com/EwertonFS/EwertonFs" target="_blank" rel="noopener noreferrer">
           <img src="Assets/Icones/forBlack/github.svg" alt="github" />
         </a>
-        <a href="https://wa.me/5579998311993" target="_blank" rel="noopener noreferrer">
+        <a href="https://bit.ly/3HYTJ3B" target="_blank" rel="noopener noreferrer">
           <img src="Assets/Icones/forBlack/whatsapp.svg" alt="whatsapp" />
         </a>
         <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
@@ -121,7 +121,7 @@
       <div class="social">
         <ul class="social-links">
           <li>
-            <a href="Assets/files/PIRATE KING Resume - Dark.pdf" id="cv-link" download><button
+            <a href="Assets/files/EwertonCvEn- Dark.pdf" id="cv-link" download><button
                 title="altere a linguagem para pt para o arquivo ficar em portugues" class="btn-cv">
                 <img src="Assets/Imagens/icons8-great-britain-48.png" alt="english" id="eng-cv" />
                 Curriculum
@@ -131,17 +131,17 @@
             <p id="social-border"></p>
           </li>
           <li>
-            <a href="">
+            <a href="https://www.linkedin.com/in/ewertonfrancis/" target="_blank" rel="noopener noreferrer">
               <img src="Assets/Icones/forBlack/linkedin.svg" alt="Linkedin" />
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://github.com/EwertonFS/EwertonFs" target="_blank" rel="noopener noreferrer">
               <img src="Assets/Icones/forBlack/github.svg" alt="github" />
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://bit.ly/3HYTJ3B" alt="whatsapp" target="_blank" rel="noopener noreferrer">
               <img src="Assets/Icones/forBlack/whatsapp.svg" alt="whatsapp" />
             </a>
           </li>
@@ -555,7 +555,7 @@
         <h class="highlights">Email</h>
         <p1>ewerton.businees@gmail.com</p1>
         <h class="highlights">Phone</h>
-        <p1>(79) 9 98311993</p1>
+        <p1>(79) 9 91390302</p1>
         <h class="highlights">Location</h>
         <p1>Aracaju-Sergipe</p1>
       </div>
@@ -563,6 +563,7 @@
   </section>
 
   <script src="index.js" />
+
 
 </body>
 
