--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <p>Name:<span class="data-color"> Ewerton Francis</span></p>
           </li>
           <li>
-            <p>Email:<span id="email"> ewerton.businees@gmail.com</span></p>
+            <p1>Email:<span id="email"> ewerton.businees@gmail.com</span></p1>
           </li>
           <li>
             <p>Age:<span class="data-color"> 32</span></p>
