--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
 
     <video class="video-container" muted autoplay loop>
-      <source src="./Assets/videos/vecteezy_aurora-borealis-northern-lights_16191969_100.mp4" type="video/mp4" />
+      <source src="./Assets/videos/vecteezy_aurora-borealis-northern-lights_16191969_100.mp4"video/mp4" />
     </video>
     <div class="name">
       <h1 id="profile-name">Ewerton&nbsp;<span>Francis</span></h1>
@@ -306,11 +306,11 @@
         </div>
 
         <div class="card-front">
-          <a href="https://github.com/EwertonFS/Astromatch"target="_blank" rel="noopener noreferrer">
+          <a href="http://precious-father.surge.sh/"target="_blank" rel="noopener noreferrer">
             <img src="Assets/Imagens/Astromatch.png" alt="Astromatch" >
           </a>
           <footer>
-              <a href="https://github.com/EwertonFS/Astromatch" title="GitHUb" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/EwertonFS/Front-Astromatch" title="GitHUb" target="_blank" rel="noopener noreferrer">
               Astromatch
               <img src="Assets/Icones/forBlack/github.svg" alt="Astromatch" id="code" />
             </a>
@@ -354,11 +354,11 @@
         </div>
         
         <div id="Dom">
-          <a href="">
-            <img src="Assets/Imagens/frontJust.jpg" alt="" />
+          <a href="https://landing-page-eight-livid.vercel.app" target="_blank" rel="noopener noreferrer">
+            <img src="Assets/Imagens/salesPage.png "alt="salesPage" />
           </a>
           <footer>
-          <a href="https://github.com/EwertonFS/Pokedex-Front">
+          <a href="https://github.com/EwertonFS/LandingPage/blob/main/readme.md">
             Sales Pages
           <img src="Assets/Icones/forBlack/github.svg" alt="PokedexDom" id="code" />
           </a>
