--- a/index.html
+++ b/index.html
@@ -342,11 +342,11 @@
         </div>
         
         <div id="Dom">
-          <a href="">
+          <a href="http://staking-fact.surge.sh/" target="_blank" rel="noopener noreferrer">
             <img src="Assets/Imagens/Pokemon.png" alt="" />
           </a>
           <footer>
-            <a href="">
+            <a href="https://github.com/EwertonFS/Projeto-Pokemon" target="_blank" rel="noopener noreferrer">
               Pokemon
               <img src="Assets/Icones/forBlack/github.svg" alt="Pokemon" id="code" />
             </a>
@@ -367,10 +367,10 @@
 
 
         <div id="Dom">
-          <a href="https://cubu-client.onrender.com/" target="_blank">
-            <img src="Assets/Imagens/frontJust.jpg" alt="" />
+          <a href="http://lumpy-toe.surge.sh/" target="_blank">
+            <img src="Assets/Imagens/lpCreate.png" alt="LandingPage" />
           </a>
-          <a href="">
+          <a href="https://github.com/EwertonFS/LandingPageCreative">
             <footer>Dom
               <img src="Assets/Icones/forBlack/github.svg" alt="Dom" id="code" />
             </footer>
