--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   <!-- fonte Acrescentar pops sanserif-->
 
   <title>Portifólio</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHYMZ2GTDJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZHYMZ2GTDJ');
+</script>
 </head>
 
 <body>
